[tool.poetry]
name = "blaise-totalmobile-client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.31"
blaise-restapi = {git = "https://github.com/ONSdigital/blaise-api-python-client.git", rev = "d374445f9f837b5e34f0c3d540572247ac388190"}
google-auth = "^2.6.0"
google-cloud-pubsub = "^2.11.0"
google-cloud-tasks = "^2.8.1"
Flask = "^2.2.5"
config = "^0.5.1"
python-dotenv = "^0.19.2"
pytest = "^7.1.1"
Flask-HTTPAuth = "^4.5.0"
phonenumbers = "^8.12.46"
google-cloud-datastore = "^2.7.1"
google-cloud-logging = "^3.1.2"
dataclasses-json = "^0.5.7"
dataclass-wizard = "^0.22.1"
typing-extensions = "^4.12.2"
setuptools = "70"
pytest-mock = "^3.14.0"
behave-html-formatter = "^0.9.10"
urllib3 = "1.26.17"
werkzeug = "3.0.6"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
python-dotenv = "^0.19.2"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.931"
types-requests = "^2.27.11"
types-Flask = "^1.1.6"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.0"
Flask = "^2.2.5"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.32"
phonenumbers = "^8.12.46"
pytest-lazy-fixture = "^0.6.3"
mocker = "^1.1.1"
responses = "^0.20.0"
requests-mock-flask = "^2022.4.3"
google-cloud = "^0.34.0"
google-cloud-datastore = "^2.7.1"
behave = "^1.2.6"
types-protobuf = "^3.19.22"
types-pytest-lazy-fixture = "^0.6.3"

[tool.poetry.group.dev.dependencies]
types-setuptools = "^75.8.0.20250210"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 120
